# src/domain/models/message.go
@@ -1,6 +1,7 @@
 package models
 
 type Message struct {
+	Id      int    `json:"message_id"`
 	Title   string `json:"title"`
 	Message string `json:"message"`
 }
