# src/interface/dto/message_search_input.go
@@ -1,0 +1,8 @@
+package dto
+
+type MessageSearchInput struct {
+	Id      *string `query:"message_id"`
+	UserId  *string `query:"user_id"`
+	Title   *string `query:"title"`
+	Message *string `query:"message"`
+}
